# Velo-player

./: Cargo.toml  Makefile  README.md  build.rs  install.sh  uninstall.sh  update.sh
assets/: velo-player.desktop
src/: main.rs  style.css  update.rs  window.rs
src/spotify/: api.rs  auth.rs  controller.rs  mod.rs  types.rs
src/ui/: cover_art.rs  mod.rs  now_playing.rs  playlists.rs  recents.rs  tracklist.rs
