[package]
name = "velo-player"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A Spotify streaming client with the Velo cockpit aesthetic"

[[bin]]
name = "velo-player"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
glib = "0.22"
gio = "0.22"

# Spotify Connect session, metadata and local audio playback
librespot = { version = "0.8", default-features = false, features = ["rodio-backend", "native-tls"] }

# Async runtime for librespot, bridged to the GLib main loop via async-channel
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-channel = "2"

# Spotify Web API (search, playlists, album art) + config + credential cache
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dirs = "6"
anyhow = "1"
